public_html/static/css/style.css
/* ... */
#tfooter .middle .enamad img{display:block;max-width:100%;background-color:#eee;padding:0.5em 0}
#tfooter .middle .enamad a:before{content:"";position:absolute;top:-4px;right:0;left:0;height:4px;background-image:url(../images/cert/footer-box.svg);background-repeat:repeat-x;}
#tfooter .middle .enamad a:after{content:"";position:absolute;bottom:-4px;right:0;left:0;height:4px;background-image:url(../images/cert/footer-box.svg);background-repeat:repeat-x;-webkit-transform:rotate(180deg);transform:rotate(180deg)}
/* footer-note*/
#tfooter .bottom{padding:2em 0;color:#aaa}
#tfooter .bottom .langlist{display:inline-block}
#tfooter .bottom .langlist a{background-color:rgba(0,0,0,0.1);color:#aaa;padding:1em 2em;display:inline-block;-webkit-transition:.3s;-o-transition:.3s;-moz-transition:.3s;transition:.3s;border-radius:2px}
#tfooter .bottom .langlist a:hover,#tfooter .bottom .langlist a:focus{background-color:rgba(0,0,0,0.4);color:#ddd;}
#tfooter .bottom .love{text-align:right;text-transform:uppercase}
#tfooter .bottom .love a:hover,#tfooter .bottom .love a:focus{color:#fff}
#tfooter .bottom .counter{font-weight:700;text-align:center;text-transform:uppercase}
#tfooter .bottom{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-flex-direction:row;-moz-box-orient:horizontal;-moz-box-direction:normal;-ms-flex-direction:row;flex-direction:row}
#tfooter .bottom .counter,#tfooter .bottom .love{padding:1em 0}
.rtl #tfooter .bottom .love{text-align:left}
/* xaccess*/
#tfooter #xaccess{position:fixed;left:0;bottom:17%;z-index:3;}
#tfooter #xaccess a{display:block;background-color:#000;opacity:0.3;padding:0.5em 1em;transition:0.3s;margin-top:0.2em;margin-right:2em;color:#fff;}
#tfooter #xaccess a:hover{opacity:0.8;padding:0.5em 2em;margin-right:0;}
.rtl #tfooter #xaccess{right:0;left:initial;}
.rtl #tfooter #xaccess a{right:0;left:initial;margin-right:0;margin-left:2em;}
.rtl #tfooter #xaccess a:hover{margin-right:0;margin-left:0;}

#tfooter .middle .share1 a{display:inline-block;}


.pricingTable{text-align:center;color:#888;font-size:1.2em}
.pricingTable .price .c{font-weight:500;color:#333}
.ltr .pricingTable .c4, .ltr .pricingTable .c12{text-align:left}
.rtl .pricingTable .c4, .rtl .pricingTable .c12{text-align:right;}
.pricingTable sup{font-size:0.6em;padding:0 0.3em;}
.pricingTable small{color:#777;font-size:0.6em;}
body .pc .em{font-weight:bold;text-align:center;padding:1em 5%;background-color:#ddd;}
  /* pricing */
.dtc > div{transition:0.3s;}
.dtc > div > *{padding:1em 1em;}
.dtc > .th{background-color:#e0d7c1;font-weight:700}
.dtc > .gh{font-weight:700;background-color:#d9dddd;margin-top:1em;}
.dtc > .th:hover{background-color:rgba(0,0,0,0.1);}
.dtc > .th.gh:hover{background-color:rgba(0,0,0,0.1)}
.dtc > div:not(.th):hover{background-color:rgba(0,0,0,0.05)}
.dtc > div a{color:#333;transition:0.3s;}
.dtc > div > *{padding:1rem .5rem;}



/*vcard*/
.vcard{font-style:normal;}
.vcard .adr{padding:1em 0}
.vcard .adr div, .vcard .adr span, .vcard .email, .vcard .tel{display:block;padding:0.5em}
.vcard .adr span{display:inline-block;}





[data-page="homepage"] #tfooter .link_home{display:none;}


#factorAdd .cbox{margin-bottom:10px;padding:0.5em}
#factorAdd .tbl{margin:0}

/*final price*/
.priceBox{font-size:1.4em;margin:0 auto 10px;padding:0;border-radius:0.25rem;background-color:#5bbbdb;color:#eee;text-align:center;max-width:400px;min-width:170px;transition:0.3s}
.priceBox h3{font-size:1em;padding:1em;margin:0}
.priceBox div span{font-weight:bold;color:#fff;display:inline-block;}
.priceBox div{transition:0.3s;}
.priceBox div:hover{color:#fff}
.priceBox .final{padding:0;background-color:#50a0c0;color:#fff;font-size:2.5em;margin-bottom:10px;height:70px;}
.priceBox .final span{line-height:70px;}
.priceBox .final abbr{font-size:1rem;display:inline-block;transform: rotate(-90deg);-webkit-transform: rotate(-90deg);-moz-transform: rotate(-90deg);vertical-align:middle;}
.priceBox .desc{padding:0.4em 0.2em;color:#fff;font-size:1.1rem;font-weight:100;height:30px;line-height:1.2}
.ltr .priceBox .desc{display:none;}
.priceBox .detail{padding:0.5em;text-align:initial;}
.priceBox .detail span{float:right;font-size:1.2em;}
.rtl .priceBox .detail span{float:left;}
.priceBox .count{display:none;}
.priceBox .discount{background-color:#50aacc;cursor:pointer;display:none;}
kbd{font-family:monospace;}


.cbox:hover, .cbox:active, .priceBox:hover, .priceBox:active
{
-webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.2), 0 0 30px rgba(0, 0, 0, 0.07) inset;
   -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.2), 0 0 30px rgba(0, 0, 0, 0.07) inset;
        box-shadow:0 1px 4px rgba(0, 0, 0, 0.2), 0 0 30px rgba(0, 0, 0, 0.07) inset;
}



.tbl.productList th{vertical-align: middle;text-align: center;}
.tbl.productList td{vertical-align: middle;text-align: center;padding:0.25em}
.tbl.productList tr td:nth-child(1){font-size: 0.8em;}
.tbl.productList tr td:nth-child(2){font-size: 0.9em;}
.tbl.productList .product{white-space:nowrap;min-width:250px;}
.tbl.productList input.count{white-space:nowrap;width:100px;padding:5px 0.5em;text-align:center;}

.tbl.productList .input.discountCn{width:120px;margin:0 auto;}
.tbl.productList .input.discountCn input.discount{padding:5px 0.5em;text-align:center;}
.tbl.productList .input.discountCn .addon.small{min-width:40px;max-width:45px;text-align:center;transition:0.3s;opacity:1}
.tbl.productList .input.discountCn .addon.small:empty{min-width:0;width:0;opacity:0;border-width:none;padding:0}

.tbl .min80{white-space:nowrap;width:80px}
.tbl .min100{white-space:nowrap;width:100px}
.tbl .min120{white-space:nowrap;width:120px}
.tbl .min150{white-space:nowrap;width:150px}

.finalPriceVal span{font-size: 2em;font-weight:bold;}
/* ... */

